# subsentry-app

./: docker-compose.yml
backend/: .env.template  Dockerfile  pyproject.toml  run.py
backend/migrations/: env.py
backend/migrations/versions/: 07185a23407f_added_user_table.py  60adbfa17f79_added_user_table.py
backend/src/: config.py  database.py
backend/src/core/: base_model.py
backend/src/core/mixins/: timestamp_mixin.py
backend/src/entities/: user.py
